fix: 🐛 disaligned buttons from different title heights

--- a/src/components/atoms/Pill.pcss
+++ b/src/components/atoms/Pill.pcss
@@ -1,5 +1,5 @@
 .button-pill {
-  @apply rounded-md px-2 py-1 mx-1 mb-3 uppercase text-xs;
+  @apply rounded-md px-2 py-1 mx-1 uppercase text-xs;
   box-shadow: var(--material-shadow-md-1), var(--material-shadow-md-2);
   background-color: var(--dark-pink);
   color: var(--pink-2);
