--- a/src/components/molecules/Card.pcss
+++ b/src/components/molecules/Card.pcss
@@ -1,6 +1,8 @@
 .card {
   @apply bg-white/20 rounded-lg p-5 relative;
   box-shadow: var(--material-shadow-strong-1), var(--material-shadow-strong-2);
+  display: grid;
+  align-items: center;
 
   .card-cover {
     @apply w-full h-60 object-cover object-top rounded-lg mb-3;
